update readme and releasenotes

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -448,6 +448,18 @@ alt="The initial startup window as it appears on macOS" width="629" height="452"
 			<p>This is a list of more useful console commands and settings and their purpose:</p>
 
 			<dl>
+				<dt>mousebutton &lt;1–2&gt; &lt;action&gt;</dt>
+				<dt>mousebutton list</dt>
+				<dd>Set a mouse button action. The 'list' parameter will show current action mappings.</dd>
+
+				<dt>joystickbutton &lt;1–4&gt; &lt;action&gt;</dt>
+				<dt>joystickbutton list</dt>
+				<dd>Set a joystick button action. The 'list' parameter will show current action mappings.</dd>
+
+				<dt>keybutton &lt;hex scancode&gt; &lt;action&gt;</dt>
+				<dt>keybutton list</dt>
+				<dd>Set a keyboard button action. The 'list' parameter will show current action mappings.</dd>
+
 				<dt>clear</dt>
 				<dd>Clear the console.</dd>
 
@@ -481,9 +493,6 @@ alt="The initial startup window as it appears on macOS" width="629" height="452"
 
 				<dt>listsymbols</dt>
 				<dd>Displays the names of all commands and variables available in the console.</dd>
-
-				<dt>novoxmips &lt;0 or 1&gt;</dt>
-				<dd>Disables or enables the use of voxel mipmaps to improve voxel visual quality.</dd>
 
 				<dt>osdrows &lt;num&gt;</dt>
 				<dd>Sets the number of visible lines of the console when it is open.</dd>
